<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TicketsFragment">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32"
            android:text="@string/title_confirm_purchase"
            android:textAlignment="center"
            android:textSize="@dimen/font_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvChildTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_32"
            android:layout_marginTop="@dimen/dimen_64"
            android:text="@string/lbl_child"
            android:textSize="@dimen/font_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <NumberPicker
            android:id="@+id/pickerChild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_32"
            app:layout_constraintBottom_toBottomOf="@id/tvChildTicket"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvChildTicket" />

        <TextView
            android:id="@+id/tvAdultTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_32"
            android:layout_marginTop="@dimen/dimen_48"
            android:text="@string/lbl_adult"
            android:textSize="@dimen/font_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pickerChild" />

        <NumberPicker
            android:id="@+id/pickerAdult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_32"
            app:layout_constraintBottom_toBottomOf="@id/tvAdultTicket"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvAdultTicket" />

        <TextView
            android:id="@+id/tvOldTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_32"
            android:layout_marginTop="@dimen/dimen_48"
            android:text="@string/lbl_idoso"
            android:textSize="@dimen/font_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pickerAdult" />

        <NumberPicker
            android:id="@+id/pickerOld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_32"
            app:layout_constraintBottom_toBottomOf="@id/tvOldTicket"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvOldTicket" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_32"
            android:layout_marginBottom="@dimen/dimen_32"
            android:text="@string/time_frame_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>