<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TimeFrameFragment">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32"
            android:textSize="@dimen/font_20"
            android:text="@string/time_frame_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvOutDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_picker_ida"
            android:textSize="@dimen/font_16"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            android:layout_marginTop="@dimen/dimen_32"
            app:layout_constraintStart_toStartOf="@id/dtIda"/>

        <DatePicker
            android:id="@+id/dtIda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_32"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOutDate" />

        <TextView
            android:id="@+id/tvBackDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_picker_volta"
            android:textSize="@dimen/font_16"
            app:layout_constraintTop_toBottomOf="@id/dtIda"
            android:layout_marginTop="@dimen/dimen_32"
            app:layout_constraintStart_toStartOf="@id/dtIda"/>

        <DatePicker
            android:id="@+id/dtVolta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_32"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBackDate" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32"
            android:text="@string/time_frame_button_text"
            app:layout_constraintEnd_toEndOf="@id/dtVolta"
            app:layout_constraintStart_toStartOf="@id/dtVolta"
            app:layout_constraintTop_toBottomOf="@id/dtVolta" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>